DW-15 fix style our services and card on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,8 @@ body {
 ::-webkit-scrollbar {
   display: none;
 }
+
+.swiper-wrapper .swiper-slide {
+  display: flex;
+  justify-content: center;
+}
